// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup should render 1`] = `
<div
  className="sc-bdVaJa gBePXc"
/>
`;

exports[`FormGroup should render with children 1`] = `
<div
  className="sc-bdVaJa gBePXc"
>
  Some child #1
  <div>
    Some child #2
  </div>
</div>
`;
